# Para

./: README.md
Exercice1/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
Exercice1/src/: Exercice1Test.cpp  Question1Test.cpp  Question2Test.cpp  Question3Test.cpp
Exercice1/src/include/: Count.hpp  Found_N_Length_Subset.hpp  Longest_Subset.hpp
Exercice2/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
Exercice2/src/: Metrics.cpp
Exercice2/src/include/: ParallelRecursiveMerge.hpp
Exercice3/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
Exercice3/src/: Exercice3Test.cpp
Exercice3/src/include/: ParallelRecursiveMerge.hpp
Exercice4/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  data_set.txt
Exercice4/src/: pearson.cpp
Exercice4/src/include/: cpp_argv.hpp
Exercice5/: CMakeLists.txt
Exercice5/src/: Exercice5Test.cpp  testParallelStableMerge.cpp
Exercice5/src/include/: Exercice5Test.hpp  ParallelStableMerge.hpp
